--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <div align="center">
             <a href="https://www.baidu.com/s?ie=utf-8&f=3&rsv_bp=1&rsv_idx=1&tn=baidu&wd=%E7%8E%8B%E7%89%8C%E5%AF%B9%E7%8E%8B%E7%89%8C&fenlei=256&oq=%25E7%258E%258B%25E7%2589%258C%25E5%25AF%25B9%25E7%258E%258B%25E7%2589%258C&rsv_pq=a2e2b95d001183f5&rsv_t=5ddaj4ppjT1VTtMixKFw8Klk1E0X7RZcCvto7H%2FE9VXRuxYCY80mBCKoQQw&rqlang=cn&rsv_enter=0&rsv_dl=ts_3&prefixsug=%25E7%258E%258B%25E7%2589%258C%25E5%25AF%25B9%25E7%258E%258B%25E7%2589%258C&rsp=3">王牌对王牌</a>
             <a href="http://www.xierenhao.com/calculator/">计算器</a>
-            <a href="sudoku-cn.com">数独</a>
+            <a href="https://www.sudoku-cn.com">数独</a>
     </body>
 </html>
