add new link for kangjifeiyan

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
             <a href="http://www.xierenhao.com/calculator/">计算器</a>
             <a href="https://www.sudoku-cn.com">数独</a>
             <a href="https://www.baidu.com/">百度</a>
+            <a href="https://voice.baidu.com/act/newpneumonia/newpneumonia/?from=osari_pc_1">抗击肺炎</a>
     </body>
 </html>
