add a new link for baiduditu

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             <a href="https://www.sudoku-cn.com">数独</a>
             <a href="https://www.baidu.com/">百度</a>
             <a href="https://voice.baidu.com/act/newpneumonia/newpneumonia/?from=osari_pc_1">抗击肺炎</a>
+            <a href="https://map.baidu.com/@13146520.15,2794850.59,12z">百度地图</a>
     </body>
 </html>
