--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
             <a href="https://www.baidu.com/">百度</a>
             <a href="https://voice.baidu.com/act/newpneumonia/newpneumonia/?from=osari_pc_1">抗击肺炎</a>
             <a href="https://map.baidu.com/@13146520.15,2794850.59,12z">百度地图</a>
+            <a href="https://baike.baidu.com/item/%E9%AD%91%E9%AD%85%E9%AD%8D%E9%AD%89/89069">魑魅魍魉</a>
     </body>
 </html>
