--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
             <a href="https://voice.baidu.com/act/newpneumonia/newpneumonia/?from=osari_pc_1">抗击肺炎</a>
             <a href="https://map.baidu.com/@13146520.15,2794850.59,12z">百度地图</a>
             <a href="https://baike.baidu.com/item/%E9%AD%91%E9%AD%85%E9%AD%8D%E9%AD%89/89069">魑魅魍魉</a>
+            <a href="https://zhidao.baidu.com/question/566609849425476324.html?fr=iks&word=%C9%FA%C6%A7%D7%D6%B6%C1%D2%F4%B8%E8%B4%CA&ie=gbk">生僻字歌词</a>
     </body>
 </html>
